--- a/templates/_partials/fields/set.html.twig
+++ b/templates/_partials/fields/set.html.twig
@@ -4,11 +4,14 @@
     {% for setChild in field.value %}
         {% if in_collection is defined %}
             {% set setChildName = name ~ '[' ~ setChild.name ~ ']' %}
+            {% set setChildId = id ~ '-' ~ setChild.name|default('unnamed') %}
             {% include '@bolt/_partials/fields/' ~ setChild.type ~ '.html.twig' with
-                {'field' : setChild, 'name' : setChildName, 'include_id': true} only %}
+                {'id': setChildId, 'field' : setChild, 'name' : setChildName, 'include_id': true} only %}
         {% else %}
             {% set setChildName = 'sets[' ~ field.name ~ ']' ~ '[' ~ setChild.name ~ ']' %}
-            {% include '@bolt/_partials/fields/' ~ setChild.type ~ '.html.twig' with {'field' : setChild, 'name' : setChildName} only %}
+            {% set setChildId = 'field-' ~ field.name|default(name)|default('unnamed') ~ '-' ~ setChild.name|default('unnamed') %}
+            {% include '@bolt/_partials/fields/' ~ setChild.type ~ '.html.twig' with
+                {'field' : setChild, 'name' : setChildName, 'id': setChildId} only %}
         {% endif %}
     {% endfor %}
 {% endblock %}
