--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -55,7 +55,8 @@
                         'label_class': 'required',
                         'name': 'password',
                         'value': '',
-                        'hidden': 'true'
+                        'hidden': 'true',
+                        'strength': 0,
                     } %}
                     <div class="form-group form-check">
                         <input type="checkbox" class="form-check-input" name="_remember_me" id="_remember_me">
