Use Password.strength prop consistently across instances

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -56,7 +56,7 @@
                         'name': 'password',
                         'value': '',
                         'hidden': 'true',
-                        'strength': 0,
+                        'strength': false,
                     } %}
                     <div class="form-group form-check">
                         <input type="checkbox" class="form-check-input" name="_remember_me" id="_remember_me">
