--- a/templates/users/edit.html.twig
+++ b/templates/users/edit.html.twig
@@ -41,7 +41,7 @@
                 'name': 'password',
                 'value': suggestedPassword,
                 'hidden': 'true',
-                'strength': 'true',
+                'strength': true,
                 'postfix': suggestedPassword ? __('password.suggested', {'%password%': suggestedPassword })
             } %}
 
