--- a/templates/users/profile.html.twig
+++ b/templates/users/profile.html.twig
@@ -40,7 +40,7 @@
                 'label': 'label.password'|trans,
                 'label_class': 'required',
                 'name': 'password',
-                'strength': 'true',
+                'strength': true,
                 'value': '',
             } %}
 
