Allow singular slug as CT in `setcontent`

--- a/public/theme/skeleton/partials/_aside.twig
+++ b/public/theme/skeleton/partials/_aside.twig
@@ -9,7 +9,7 @@
     <div>
         {# The next section attempts to fill the panel in the sidebar with the contents of the
             'about'-block, if it exists. First, attempt to fetch the block by its slug #}
-        {% setcontent block = "blocks/about" %}
+        {% setcontent block = "block/about" %}
 
         {# check if we have a title. If so, we know we have content to display. Otherwise, we will
             output a default text, telling the user to create the 'blocks' in the backend. #}
