If strength == false, make sure it propagates to Vue component

--- a/templates/_partials/fields/password.html.twig
+++ b/templates/_partials/fields/password.html.twig
@@ -7,7 +7,7 @@
             :value='{{ value|json_encode }}'
             :label='{{ label|json_encode }}'
             :label_class='{{ label_class|default()|json_encode }}'
-            :strength='{{ strength|default()|json_encode }}'
+            :strength='{{ strength|default(false)|json_encode }}'
             :class='{{ class|json_encode }}'
             :hidden='{{ hidden|default('true') }}'
             :required='{{ required|json_encode }}'
