--- a/templates/finder/_files_cards.html.twig
+++ b/templates/finder/_files_cards.html.twig
@@ -68,7 +68,7 @@
                             <i class="far fa-w fa-copy"></i>
                             {{ 'files_cards.action_duplicate'|trans }} {{ file.getRelativePathname|excerpt(22) }}
                         </a>
-                        <a class="dropdown-item" href="#" data-confirmation="Are you sure you wish to delete this Content?">
+                        <a class="dropdown-item" href="#" data-confirmation="{{ 'action.confirm_delete'|trans }}">
                             <i class="fas fa-w fa-trash"></i>
                             {{ 'files_cards.action_delete'|trans }} {{ file.getRelativePathname|excerpt(22) }}
                         </a>
