--- a/templates/content/edit.html.twig
+++ b/templates/content/edit.html.twig
@@ -5,7 +5,7 @@
 {% for key, fielddefinition in record.definition.fields %}
     {% set alltypes = alltypes|merge([fielddefinition.type]) %}
 {% endfor %}
-{% set displayTitle = record|title|default(record.id ?
+{% set displayTitle = record|title(currentlocale)|default(record.id ?
     __('caption.untitled_contenttype', {'%contenttype%': record.definition.singular_name}) :
     __('caption.new_contenttype', {'%contenttype%': record.definition.singular_name}) ) %}
 
