--- a/templates/_partials/fields/imagelist.html.twig
+++ b/templates/_partials/fields/imagelist.html.twig
@@ -30,6 +30,7 @@
        :extensions='{{  extensions|json_encode }}'
        :attributes-link='{{ path('bolt_media_new')|json_encode }}'
        :limit='{{ limit|json_encode }}'
+       :readonly='{{ readonly|json_encode }}'
    ></editor-imagelist>
 
 {% endblock %}
