--- a/templates/_partials/fields/filelist.html.twig
+++ b/templates/_partials/fields/filelist.html.twig
@@ -29,5 +29,6 @@
         :extensions='{{  extensions|json_encode }}'
         :attributes-link='{{ path('bolt_media_new')|json_encode }}'
         :limit='{{ limit|json_encode }}'
+        :readonly='{{ readonly|json_encode }}'
     ></editor-filelist>
 {% endblock %}
