Don't show slugs for contenttypes without slugs

--- a/templates/content/_fields.html.twig
+++ b/templates/content/_fields.html.twig
@@ -9,10 +9,12 @@
                 {% set field = field_factory(key, fielddefinition) %}
             {% endif %}
 
-            {% include [
-                '@bolt/_partials/fields/' ~ fielddefinition.type ~ '.html.twig',
-                '@bolt/_partials/fields/generic.html.twig'
-                ] with { 'field' : field } %}
+            {% if not field.definition.hidden %}
+                {% include [
+                    '@bolt/_partials/fields/' ~ fielddefinition.type ~ '.html.twig',
+                    '@bolt/_partials/fields/generic.html.twig'
+                    ] with { 'field' : field } %}
+            {% endif %}
 
         {% endfor %}
     </div>
