--- a/templates/_partials/fields/select.html.twig
+++ b/templates/_partials/fields/select.html.twig
@@ -5,7 +5,7 @@
 
      - options: The actual options that are available in the select
      - multiple: A boolean to set whether or not we allow multiple selections
-     - allowempty: A boolean to set whether or not we allow clearing the selection
+     - allow_empty: A boolean to set whether or not we allow clearing the selection
  #}
 
 {% if options is not defined %}
@@ -22,7 +22,6 @@
         :options="{{ options|json_encode }}"
         :form='{{ form|json_encode }}'
         :multiple="{{ multiple }}"
-        :required="{{ required|json_encode }}"
         :readonly="{{ readonly|json_encode }}"
         :errormessage='{{ errormessage|json_encode }}'
     ></editor-select>
