--- a/templates/_partials/fields/select.html.twig
+++ b/templates/_partials/fields/select.html.twig
@@ -23,5 +23,6 @@
         :multiple="{{ multiple }}"
         :readonly="{{ readonly|json_encode }}"
         :errormessage='{{ errormessage|json_encode }}'
+        :allowempty="{{ required ? 'false' : 'true' }}"
     ></editor-select>
 {% endblock %}
