--- a/templates/content/_taxonomies.html.twig
+++ b/templates/content/_taxonomies.html.twig
@@ -3,13 +3,19 @@
         {% set definition = config.get('taxonomies/' ~ taxonomy) %}
         {% if definition %}
 
-            {% set options = taxonomyoptions(definition) %}
-            {% set value = taxonomyvalues(record.taxonomies, definition) %}
+            {% set options = taxonomy_options(definition) %}
+            {% set value = taxonomy_values(record.taxonomies, definition) %}
 
             <div class="form-group is-normal">
-                <label for="field-title">
-                    {{ definition.name }}:
-                </label>
+
+                {% include '@bolt/_partials/fields/_label.html.twig' with {
+                    'id': 'taxonomy-' ~ definition.slug,
+                    'label': definition.name,
+                    'required': definition.required
+                } %}
+
+                {% dump(definition) %}
+
                 <div>
                     <editor-select
                             :value="{{ value }}"
@@ -18,7 +24,7 @@
                             :options="{{ options }}"
                             :multiple="{{ definition.multiple ? 'true' : 'false' }}"
                             :taggable="{{ (definition.behaves_like == 'tags') ? 'true' : 'false' }}"
-                            :allowempty={{ definition.allow_empty ? 'true' : 'false' }}
+                            :allowempty="{{ definition.required ? 'false' : 'true' }}"
                     ></editor-select>
                 </div>
 
