--- a/templates/content/_fields_aside.html.twig
+++ b/templates/content/_fields_aside.html.twig
@@ -6,7 +6,7 @@
         'value' : [record.status],
         'options' : record.statusoptions,
         'form' : 'editcontent',
-        'allowempty' : false
+        'required' : true
     } %}
 
     {% include '@bolt/_partials/fields/date.html.twig' with {
