--- a/templates/content/_buttons.html.twig
+++ b/templates/content/_buttons.html.twig
@@ -22,7 +22,7 @@
         {% if record.status == "published" %}
             <div>
                 <strong>View live</strong><br>
-                <a href="{{ record|link(true) }}">{{ record|link(true)|trim('https://', side='left') }}</a>
+                <a href="{{ record|link(true) }}" target="_blank">{{ record|link(true)|trim('https://', side='left') }}</a>
             </div>
         {% endif %}
 
