--- a/templates/finder/_files_actions.html.twig
+++ b/templates/finder/_files_actions.html.twig
@@ -29,10 +29,10 @@
             {{ 'files_cards.action_duplicate'|trans }} {{ file.getRelativePathname|excerpt(22) }}
         </a>
 
-        <a class="dropdown-item" ,
+        <a class="dropdown-item delete" ,
            href="{{ path('bolt_file_delete',
                {'location': location.key|default('files'), 'path': file.getRelativePathname, '_csrf_token': csrf_token('delete')}) }}"
-           data-confirmation="Are you sure you wish to delete this Content?">
+           data-confirmation="{{ 'file.delete_confirm'|trans }}">
             <i class="fas fa-w fa-trash"></i>
             {{ 'files_cards.action_delete'|trans }} {{ file.getRelativePathname|excerpt(22) }}
         </a>
