--- a/templates/content/_buttons.html.twig
+++ b/templates/content/_buttons.html.twig
@@ -6,7 +6,6 @@
 
     {% if record.id %}
         <div class="btn-group">
-
             {{ macro.button(
                 'action.preview',
                 'fa-external-link-square-alt',
@@ -16,13 +15,11 @@
                     'formtarget': '_blank',
                     'formaction': path('bolt_content_edit_preview', {'id': record.id })
                 }) }}
-
         </div>
 
         {% if record.status == "published" %}
-            <div>
-                <strong>{{ 'action.view_saved'|trans }}</strong><br>
-                <a href="{{ record|link(true) }}" target="_blank">{{ record|link(true)|trim('https://', side='left') }}</a>
+            <div class="form-fieldsgroup__summary-fields">
+                <a href="{{ record|link(true) }}"  target="_blank">{{ macro.icon('fa-sign-out-alt') }} {{ 'action.view_saved'|trans }}</a>
             </div>
         {% endif %}
 
