--- a/templates/_partials/fields/_label.html.twig
+++ b/templates/_partials/fields/_label.html.twig
@@ -1,9 +1,12 @@
-{%- if type|default() != 'checkbox' -%}
-    <label for="{{ id }}" class="editor--label{% if type|default() == 'collection' %} sr-only{% endif %}">
+{% import '@bolt/_macro/_macro.html.twig' as macro %}
 
-        {%- if localize|default() -%}
-          <i class="fas fa-language"></i>
-        {%- endif -%}
+{%- if type|default() != 'checkbox' -%}
+
+    {%- if localize|default() -%}
+        <span style="color: #999; font-size: 140%; line-height: 0;" class="float-right" title="{{ __('label.translatable') }}">{{ macro.icon('language') }}</span>
+    {%- endif -%}
+
+    <label for="{{ id }}" class="editor--label{% if type|default() == 'collection' %} sr-only{% endif %}">
 
         {% if in_collection is defined %}
             <span style="font-weight: normal;">{{ collection_label }} &raquo;</span>
