--- a/templates/content/view_locales.html.twig
+++ b/templates/content/view_locales.html.twig
@@ -1,17 +1,26 @@
 {% extends '@bolt/_base/layout.html.twig' %}
+{% import '@bolt/_macro/_macro.html.twig' as macro %}
 
 {% set alltypes = ['select'] %}
 {% for key, fielddefinition in record.definition.fields %}
     {% set alltypes = alltypes|merge([fielddefinition.type]) %}
 {% endfor %}
 
+{% set displayTitle = record|title()|default(record.id ?
+    __('caption.untitled_contenttype', {'%contenttype%': record.definition.singular_name}) :
+    __('caption.new_contenttype', {'%contenttype%': record.definition.singular_name}) ) %}
+
+{# The 'title' and 'shoulder' blocks are the main heading of the page. #}
+{% block shoulder %}
+    {{ 'caption.translations'|trans }} &raquo;
+    {{ record.definition.singular_name }}
+{% endblock shoulder %}
+
 {% block title %}
     {{ icon(record) }}
-    {{ 'caption.edit'|trans }}
-    {{ record.definition.singular_name }}
-    »
-    <strong>{{ excerpt(record|title, 50)|default('New') }}</strong>
+    {{ displayTitle|excerpt(50) }}
 {% endblock %}
+
 
 {#{% block vue_id 'editor' %}#}
 
@@ -63,8 +72,10 @@
             <td>&nbsp;</td>
             {% for locale in locales %}
                 <td>
+
                     <a class="btn btn-secondary btn-sm"
                        href="{{ path('bolt_content_edit', {'id': record.id, 'edit_locale': locale}) }}">
+                        {{ macro.icon('edit') }}
                         {{ 'general.phrase.edit'|trans }}
                     </a>
                 </td>
