Add Event for operations on Content. Clear cache for menu's. Log save after editing content.

--- a/templates/pages/logviewer.html.twig
+++ b/templates/pages/logviewer.html.twig
@@ -87,6 +87,10 @@
             {% else %}
                 -
             {% endif %}
+
+            {% if item.content %}
+               {{ __('label.content') }}: № {{ item.content }}
+            {% endif %}
         </td>
     </tr>
     {% endfor %}
