Add Labels for statuses

--- a/templates/content/_fields_aside.html.twig
+++ b/templates/content/_fields_aside.html.twig
@@ -4,7 +4,7 @@
         'label' : 'field.status'|trans,
         'name' : 'status',
         'value' : [record.status],
-        'options' : record.statusoptions,
+        'options' : record|status_options,
         'form' : 'editcontent',
         'required' : true
     } %}
