--- a/templates/content/edit.html.twig
+++ b/templates/content/edit.html.twig
@@ -73,7 +73,7 @@
                     {{ 'title.save_changes'|trans }}
                 </div>
                 <div class="card-body">
-                  {% include '@bolt/content/_buttons.html.twig' %}
+                  {% include '@bolt/content/_buttons.html.twig' with {'status': true}  %}
                 </div>
             </div>
 
