--- a/templates/content/_buttons.html.twig
+++ b/templates/content/_buttons.html.twig
@@ -24,9 +24,9 @@
         </p>
         {% endif %}
 
-        {% if record.status == "published" %}
+        {% if record.status == "published" and record.definition.viewless != true %}
             <div class="form-fieldsgroup__summary-fields">
-                <a href="{{ record|link(true) }}"  target="_blank">{{ macro.icon('fa-sign-out-alt') }} {{ __('action.view_saved') }}</a>
+                <a href="{{ record|link(true) }}" class="btn btn-tertiary" target="_blank">{{ macro.icon('fa-sign-out-alt') }} {{ __('action.view_saved') }}</a>
             </div>
         {% endif %}
 
