--- a/assets/scss/modules/base/_status.scss
+++ b/assets/scss/modules/base/_status.scss
@@ -44,7 +44,9 @@
   }
 }
 
-.badge-homepage, .badge-404, .badge-maintenance {
+.badge-homepage,
+.badge-404,
+.badge-maintenance {
   font-weight: normal;
   vertical-align: middle;
   margin-top: -0.4em;
