Require confirmation to delete collection item in editor

--- a/templates/_partials/fields/_collection_buttons.html.twig
+++ b/templates/_partials/fields/_collection_buttons.html.twig
@@ -10,7 +10,7 @@
         <i class="fas fa-fw fa-chevron-down"></i>
         {{ 'collection.move_item_down'|trans }}
     </button>
-    <button class='action-remove-collection-item btn btn-hidden-danger btn-sm'>
+    <button class='action-remove-collection-item btn btn-hidden-danger btn-sm' data-confirmation="{{ 'collection.confirm_delete'|trans }}">
         <i class="fas fa-fw fa-trash"></i>
         {{ 'collection.remove_item'|trans }}
     </button>
