--- a/assets/scss/init/_base.scss
+++ b/assets/scss/init/_base.scss
@@ -38,11 +38,19 @@ code {
 .card {
   box-shadow: $card-box-shadow;
   background: #fff;
-  border: 1px solid #e8e8e8 !important;
+  border: 1px solid var(--very-light-border) !important;
 
   .card-header {
     font-weight: $font-weight-bold;
     padding: 0.8125rem 1.25rem;
+  }
+
+  .card-body {
+    padding: $spacer $spacer*1.5;
+  }
+
+  .form-group {
+    margin-bottom: 1rem;
   }
 }
 
