--- a/templates/_partials/fields/date.html.twig
+++ b/templates/_partials/fields/date.html.twig
@@ -35,14 +35,11 @@
     :errormessage='{{ errormessage|json_encode }}'
   ></editor-date>
   {% else %}
-    <span
-        :id='{{ id|json_encode }}'
-        :name='{{ name|json_encode }}'
-        class=""
-        {% if required == 1 %}
-        required
-        {% endif %}
-    >{{ value|date(format='F d, Y - g:ia')}}</span>
+      <br>
+    {{ value|localedatetime('%B %e, %Y - %k:%M<small>%p</small>') }}
+      <small>(<abbr class="datetime-relative" title="{{ value|localedatetime('%A %B %e, %Y - %k:%M%p') }}">
+          {{- value|date('c') -}}
+          </abbr>)</small>
   {% endif %}
   
 {% endblock %}
