--- a/templates/content/_buttons.html.twig
+++ b/templates/content/_buttons.html.twig
@@ -20,14 +20,26 @@
         {% if status|default() %}
         <p>
             <strong>{{ __('label.current_status') }}:</strong>
-            <span class="status mx-1 is-{{ record.status}}"></span>{{ __('status.' ~ record.status) }}
+            <span class="status mx-1 is-{{ record.status}}"></span>{{ __('status.' ~ record.status) }}<br>
+            {% if record.status == 'published' %}
+                <small>
+                    ({{ 'field.modifiedAt'|trans }}:
+                    <abbr class="datetime-relative" title="{{ record.modifiedAt|localedatetime('%A %B %e, %Y - %k:%M%p') }}">
+                        {{- record.modifiedAt|date('c') -}}
+                    </abbr>)
+                </small>
+            {% endif %}
         </p>
-        {% endif %}
 
+        <hr>
+        <div class="form-fieldsgroup__summary-fields">
         {% if record.status == "published" and record.definition.viewless != true %}
-            <div class="form-fieldsgroup__summary-fields">
-                <a href="{{ record|link(true) }}" class="btn btn-tertiary" target="_blank">{{ macro.icon('fa-sign-out-alt') }} {{ __('action.view_saved') }}</a>
-            </div>
+            <a href="{{ record|link(true) }}" class="btn btn-tertiary btn-sm" target="_blank">{{ macro.icon('fa-sign-out-alt') }} {{ __('action.view_saved') }}</a>
+        {% endif %}
+            <a href="{{ record.extras.deleteLink }}" class='action-remove-collection-item btn btn-sm btn-hidden-danger' data-confirmation="{{ 'action.confirm_delete'|trans }}">
+{{ macro.icon('trash') }}{{ 'action.delete'|trans }}
+            </a>
+        </div>
         {% endif %}
 
     {% endif %}
