--- a/templates/content/_localeswitcher.html.twig
+++ b/templates/content/_localeswitcher.html.twig
@@ -3,18 +3,19 @@
 {% if record.id and currentlocale %}
     <div class="card mb-3">
         <div class="card-header">
+            {{ macro.icon('language') }}
             {{ 'field.current_locale'|trans }}:
             {{ flag(currentlocale) }}<b>{{ currentlocale }}</b>
         </div>
         <div class="card-body">
 
             <general-language
-                    label="{{ 'field.switch_to_locale'|trans }}"
+                    label="{{ 'field.switch_to_locale'|trans }}:"
                     current="{{ currentlocale }}"
                     :locales="{{ locales(locales) }}"
             ></general-language>
 
-            {{ macro.buttonlink('localeswitcher.button_info', path('bolt_content_edit_locales', {'id': record.id}),  'language', 'tertiary') }}
+            {{ macro.buttonlink('localeswitcher.button_info', path('bolt_content_edit_locales', {'id': record.id}),  'info-circle', 'tertiary btn-sm') }}
 
         </div>
     </div>
