Format title works without breaking on new content. Sorting content by title uses format_title.

--- a/public/theme/skeleton/custom/test.twig
+++ b/public/theme/skeleton/custom/test.twig
@@ -13,11 +13,7 @@
 
     <marquee>This template is for testing only! This template is for testing only! This template is for testing only!</marquee>
 
-    {% if record.hasField('title') %}
-        <h1 class="title">{{ record.title }}</h1>
-    {% else %}
-        <h1 class="heading">{{ record|title }}</h1>
-    {% endif %}
+    <h1 class="title">{{ record|title }}</h1>
 
     <hr>
 
