--- a/templates/content/listing.html.twig
+++ b/templates/content/listing.html.twig
@@ -41,17 +41,8 @@
       :csrftoken="{{ csrf_token('batch')|json_encode }}"
     ></listing-select-box>
 
-    {# Set `titleField` and `titleLabel`, but only if we have records #}
-    {% if records|first %}
-        {% set titleField = records|first|title_fields|first %}
-        {% set titleLabel = contentType.fields[titleField].label %}
-    {% else %}
-        {% set titleField = '-' %}
-        {% set titleLabel = '-' %}
-    {% endif %}
-
     {% set filterOptions = {
-        'id': "Id", (titleField): titleLabel, 'author': 'Author', 'status': 'Status', 'createdAt': 'Created date',
+        'id': "Id", 'title': 'Title', 'author': 'Author', 'status': 'Status', 'createdAt': 'Created date',
         'modifiedAt': 'Modified date', 'publishedAt': 'Published date', 'depublishedAt': 'Depublished date'
     } %}
 
